# desafio_inovative

./: .gitignore  Desafio_1.md  Desafio_2.md  Desafio_3.md  Desafio_4.md  README.md  desafio_1.py  docker-compose.yml  pyproject.toml  requirements.txt
desafio_3/: criar_tabela_csv.sql  importar_tabela_csv.sql  query_analitica.sql
desafio_4/api/: app.py  requirements.txt
desafio_4/web/: package-lock.json  package.json
desafio_4/web/src/: App.vue
src/: desafio_2.py
