[project]
name = "desafio-inovative"
version = "0.1.0"
description = "Desafio proposto para estágio de desenvolvedor fullstack"
authors = [{ name = "fipdev2" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pdfplumber (>=0.11.6,<0.12.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


# [build-system]
# requires = ["poetry-core>=2.0.0,<3.0.0"]
# build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
